2005-10-11  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Add a flock-based outer layer around the
	dpkg-based buildlocks. Now "the lock" automatically goes away when
	fink process dies, so buildlock pkgs don't need to prevent
	self-replacement.
	* Engine.pm: Buildlock cleanup can now check for flockable
	lockfiles instead of dealing with stored pids.

2005-10-07  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Quote --logfile as shell arg.

2005-10-07  Daniel Macks  <dmacks@netspace.org>

	* Config.pm, PkgVersion.pm: Implement --logfile cmdline flag to
	specify buildlog filename (with %-expansion)

2005-10-06  Daniel Macks  <dmacks@netspace.org>

	* Config.pm, PkgVersion.pm: Store copies of filehandles as
	PkgVersion package-globals instead of in Config. When setting
	STDERR tee filter, child process's STDERR is always fd 2 (don't
	use fd of parent's stashed copy of STDERR).

2005-10-06  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Never lower $^F.

2005-10-06  Daniel Macks  <dmacks@netspace.org>

	* Tie::OutputTee.pm: Removed.
	* Config.pm: Store dup's of STDOUT and STDERR file descriptors
	during initialization.
	* PkgVersion.pm: Rewrite log_output to just reopen STDOUT and
	STDERR as pipes to 'tee $logfile' (or reopen back to Config's
	saved original file descriptors) instead of messing with tied
	filehandles.

2005-10-06  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Configure.pm, Engine.pm: Add --mirrors option to 'fink configure', to
	allow configuring only the mirrors.

2005-10-06  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: OutputTee can't be chained, so current logging
	status must be package-global not instance data.

2005-10-06  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Use Fink::Tie::OutputTee for --log-output.
	* Tie::OutputTee.pm: Import from exp/dmacks IOFilter.pm. This new
	package enables one to "tee" a writable filehandle into a file.

2005-10-06  Daniel Macks  <dmacks@netspace.org>
